[gd_scene load_steps=43 format=3 uid="uid://iavbbnd70b78"]

[ext_resource type="Script" path="res://scripts/enemies/archer/archer.gd" id="1_w88m3"]
[ext_resource type="Texture2D" uid="uid://bgmynisrtv6pw" path="res://assets/enemies/archer/GandalfHardcore Archer sheet.png" id="2_7wahy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rlneg"]
atlas = ExtResource("2_7wahy")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_syosu"]
atlas = ExtResource("2_7wahy")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn6a0"]
atlas = ExtResource("2_7wahy")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci6yk"]
atlas = ExtResource("2_7wahy")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ogbb"]
atlas = ExtResource("2_7wahy")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3u2h"]
atlas = ExtResource("2_7wahy")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wt6a"]
atlas = ExtResource("2_7wahy")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aro4j"]
atlas = ExtResource("2_7wahy")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujinv"]
atlas = ExtResource("2_7wahy")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_57dld"]
atlas = ExtResource("2_7wahy")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qef6"]
atlas = ExtResource("2_7wahy")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfqgl"]
atlas = ExtResource("2_7wahy")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4kww"]
atlas = ExtResource("2_7wahy")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q7x3"]
atlas = ExtResource("2_7wahy")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fikt1"]
atlas = ExtResource("2_7wahy")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jh44w"]
atlas = ExtResource("2_7wahy")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi416"]
atlas = ExtResource("2_7wahy")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_un751"]
atlas = ExtResource("2_7wahy")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ihv4"]
atlas = ExtResource("2_7wahy")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0odsc"]
atlas = ExtResource("2_7wahy")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa7kw"]
atlas = ExtResource("2_7wahy")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuokc"]
atlas = ExtResource("2_7wahy")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_18iwy"]
atlas = ExtResource("2_7wahy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qke65"]
atlas = ExtResource("2_7wahy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_byckr"]
atlas = ExtResource("2_7wahy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt8es"]
atlas = ExtResource("2_7wahy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nngf7"]
atlas = ExtResource("2_7wahy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwopr"]
atlas = ExtResource("2_7wahy")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrl2q"]
atlas = ExtResource("2_7wahy")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgxb4"]
atlas = ExtResource("2_7wahy")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wafgp"]
atlas = ExtResource("2_7wahy")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs5q0"]
atlas = ExtResource("2_7wahy")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vwjw"]
atlas = ExtResource("2_7wahy")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf2bj"]
atlas = ExtResource("2_7wahy")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrg3t"]
atlas = ExtResource("2_7wahy")
region = Rect2(448, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0wona"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlneg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syosu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn6a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci6yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ogbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3u2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wt6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aro4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujinv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57dld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qef6")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfqgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4kww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q7x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fikt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jh44w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi416")
}],
"loop": false,
"name": &"die",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_un751")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ihv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0odsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa7kw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuokc")
}],
"loop": false,
"name": &"hurt",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18iwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qke65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byckr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt8es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nngf7")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwopr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrl2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgxb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wafgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs5q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vwjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf2bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrg3t")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3khgf"]
radius = 34.0
height = 88.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pqsfr"]
radius = 700.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gokls"]
radius = 537.015

[sub_resource type="CircleShape2D" id="CircleShape2D_s87c1"]
radius = 148.788

[node name="Archer" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource("1_w88m3")
optimal_attack_range_min = null
optimal_attack_range_max = null
stop_chase_distance = null
health = 300.0
move_speed = null
acceleration = null
deceleration = null
gravity_scale = null
detection_range = null
attack_range = null
attack_cooldown = null
wander_time_min = null
wander_time_max = null
touch_damage = null
hitbox_area = NodePath("Hitbox")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(13, -20)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_0wona")
animation = &"run"

[node name="ArrowSpawnPoint" type="Marker2D" parent="AnimatedSprite2D"]
position = Vector2(7, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_3khgf")

[node name="TouchDamageArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="Hitbox" type="Area2D" parent="."]
light_mask = 0
visibility_layer = 0
collision_layer = 16
collision_mask = 32

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_pqsfr")

[node name="AttackArea" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_gokls")

[node name="RetreatRangeArea" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RetreatRangeArea"]
shape = SubResource("CircleShape2D_s87c1")

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="EdgeCheckRight" type="RayCast2D" parent="."]
position = Vector2(-25, 35)
target_position = Vector2(0, 10)

[node name="EdgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2(25, 35)
target_position = Vector2(0, 10)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -24.0
offset_top = -71.0
offset_right = 26.0
offset_bottom = -44.0
